--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://cordova.apache.org/ns/plugins/1.0"
-        id="cordova-plugin-radar"
+        id="cordova.plugin.radar.hathway"
         version="1.0.0">
     <name>Radar</name>
     <js-module src="www/Radar.js" name="Radar">
